tests/NormalTests/paczka1/small_fuzzy/59182365.err
Error in line 2: A313 A313 -4,2
Error in line 1: A313 A313 63,4
Error in line 13: A313 S102 19,8
